markov-manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: markov
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: markov-server
  namespace: markov
spec:
  replicas: 1
  selector:
    matchLabels:
      app: markov-server
  template:
    metadata:
      labels:
        app: markov-server
    spec:
      nodeSelector:
        beta.kubernetes.io/arch: amd64
      containers:
      - name: markov
        image: docker.lan:5000/markov-server
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 5000
      volumes:
      - name: init-scripts
        configMap:
          name: markov-init
---
kind: Service
apiVersion: v1
metadata:
  name: markov-server
  namespace: markov
spec:
  type: ClusterIP
  selector:
    app: markov-server
  clusterIP: None
  ports:
  - port: 80
    targetPort: http
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: markov
  namespace: markov
spec:
  rules:
  - host: markov.lan
    http:
      paths:
      - backend:
          serviceName: markov-server
          servicePort: 80
